objects/vlocity_ins__VlocityAction__c.object
<CustomObject>
    <fields>
        <fullName>Check_for_Errors__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used in validation rules</description>
        <label>Check for Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionIcon__c</fullName>
        <inlineHelpText>If an image is uploaded here, it will take precedent over the Vlocity Icon. The image will automatically be resized to 22px wide in the Action.</inlineHelpText>
        <label>Custom Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdditionalFilter__c</fullName>
        <label>Additional Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicablePermissionName__c</fullName>
        <label>Applicable Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableTypes__c</fullName>
        <label>Applicable Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableUserProfiles__c</fullName>
        <label>Applicable User Profile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlocity Admin</fullName>
                </value>
                <value>
                    <fullName>Vlocity Health</fullName>
                </value>
                <value>
                    <fullName>Vlocity Insurance</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Vlocity Partner Community User</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomLabelName__c</fullName>
        <description>The name of a Salesforce Custom Label to be used instead of the Display Label to define the text to show on the action in the UI. Using a Custom Label allows translations of the display text and the ability to update the display text for many actions with a single edit.</description>
        <label>Custom Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayLabel__c</fullName>
        <label>Display Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayOn__c</fullName>
        <label>Display On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExecutionSequence__c</fullName>
        <label>Execution Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvokeClassName__c</fullName>
        <label>Invocation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvokeMethodInput__c</fullName>
        <description>Input parameter that would be passed on to the InvokeMethodName__c at runtime.</description>
        <label>Invocation Method Input</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvokeMethodName__c</fullName>
        <label>Invocation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSeedAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsStateDefaultAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStateDefaultAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LinkType__c</fullName>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ConsoleCards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenUrlMode__c</fullName>
        <label>Open URL in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Window</fullName>
                    <default>true</default>
                    <label>Current Window</label>
                </value>
                <value>
                    <fullName>New Tab / Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To State</label>
        <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>Vlocity_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateModelId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Model</label>
        <referenceTo>vlocity_ins__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>VlocityActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UrlParameters__c</fullName>
        <label>URL Parameter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Url__c</fullName>
        <label>Target URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidationClassName__c</fullName>
        <label>Validation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidationMethodName__c</fullName>
        <label>Validation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityIcon__c</fullName>
        <defaultValue>&apos;icon-v-document1-line&apos;</defaultValue>
        <inlineHelpText>Choose an icon from the list of icons below the Vlocity Action Detail (will not show up in Vlocity Action Edit) by copying its class name here (i.e. icon-v-document1-line). Use attachment to load custom image.</inlineHelpText>
        <label>Vlocity Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityStateModelVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity State Model Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__VlocityStateModelVersion__c.vlocity_ins__StateModelId__c</field>
                <operation>equals</operation>
                <valueField>$Source.vlocity_ins__StateModelId__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__VlocityStateModelVersion__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>VlocityStateModelVersionActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Action</label>
    <listViews>
        <fullName>All_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__DisplayLabel__c</columns>
        <columns>vlocity_ins__ApplicableTypes__c</columns>
        <columns>vlocity_ins__DisplayOn__c</columns>
        <columns>vlocity_ins__LinkType__c</columns>
        <columns>vlocity_ins__DisplaySequence__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>Check_for_Errors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Actions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Case_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__DisplayLabel__c</columns>
        <columns>vlocity_ins__ApplicableTypes__c</columns>
        <columns>vlocity_ins__DisplayOn__c</columns>
        <columns>vlocity_ins__DisplaySequence__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Case Actions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__DisplayLabel__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <columns>vlocity_ins__ApplicableTypes__c</columns>
        <columns>vlocity_ins__DisplaySequence__c</columns>
        <columns>vlocity_ins__LinkType__c</columns>
        <columns>vlocity_ins__DisplayOn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vlocity Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Display_on_All_or_Web</fullName>
        <active>false</active>
        <errorConditionFormula>OR(AND( Check_for_Errors__c, TEXT(vlocity_ins__DisplayOn__c) = &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>vlocity_ins__DisplayOn__c</errorDisplayField>
        <errorMessage>Display On Cannot Be Blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_Active</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Check_for_Errors__c,  vlocity_ins__IsActive__c = false)</errorConditionFormula>
        <errorDisplayField>vlocity_ins__IsActive__c</errorDisplayField>
        <errorMessage>Active must be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_have_URL_Parameter</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Check_for_Errors__c, CONTAINS( vlocity_ins__Url__c , &quot;{0}&quot;), ISBLANK( vlocity_ins__UrlParameters__c ) )</errorConditionFormula>
        <errorDisplayField>vlocity_ins__UrlParameters__c</errorDisplayField>
        <errorMessage>The URL Target has {0}, but the URL Parameter is missing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Namespace_should_have_double_underscore</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Check_for_Errors__c, 
AND( 
CONTAINS( vlocity_ins__Url__c , &quot;vlocity_ins&quot;), NOT(CONTAINS( vlocity_ins__Url__c , &quot;vlocity_ins__&quot;)) 
) 
)</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Url__c</errorDisplayField>
        <errorMessage>The Namespace should be followed by double underscore: &quot;vlocity_cmt__&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URL_Id_Parameter_should_be_correct_case</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Check_for_Errors__c, 
AND( 
CONTAINS( LOWER( vlocity_ins__UrlParameters__c ),&quot;id&quot;), 
NOT(CONTAINS( vlocity_ins__UrlParameters__c ,&quot;Id&quot;)) 
) 
)</errorConditionFormula>
        <errorDisplayField>vlocity_ins__UrlParameters__c</errorDisplayField>
        <errorMessage>The URL Parameter contains an &quot;id&quot; reference, but it is not properly capitalized. It should be &quot;Id&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URL_Target_has_parentheses</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
AND( Check_for_Errors__c, CONTAINS( vlocity_ins__Url__c ,&quot;)&quot; )), 
AND( Check_for_Errors__c, CONTAINS( vlocity_ins__Url__c ,&quot;(&quot; )) 
)</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Url__c</errorDisplayField>
        <errorMessage>The Target URL contains &apos;(&apos; or &apos;)&apos;. For variables, use &apos;{&apos; or &apos;}&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URL_Target_must_have_variable</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Check_for_Errors__c, 
NOT(ISBLANK( vlocity_ins__UrlParameters__c)), 
NOT(CONTAINS( vlocity_ins__Url__c, &quot;{0}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Url__c</errorDisplayField>
        <errorMessage>The URL Parameters field has a parameter, but there is no parameter in the Target URL. There should be {0}.</errorMessage>
    </validationRules>
</CustomObject>